Fix spacing on Bank Transfer label

--- a/common/static/common/styles/studio/_payments.scss
+++ b/common/static/common/styles/studio/_payments.scss
@@ -309,6 +309,10 @@
       }
     }
   }
+
+  .gateway-options-label {
+    margin-top: $spacer / 4;
+  }
 }
 
 .braintree-sheet {
